fix layout problem

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -27,10 +27,6 @@ input:focus::-moz-placeholder {
   opacity: 0;
 }
 
-input:focus:-ms-input-placeholder {
-  opacity: 0;
-}
-
 input:focus:-moz-placeholder {
   opacity: 0;
 }
