--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -5,7 +5,7 @@
     justify-content:center;
   }
   input{
-    margin:5px 0 5px;
+    margin:5px 0 5px 10px;
     width:300px;
     height:40px;
     padding:3px;
