--- a/src/pages/register.css
+++ b/src/pages/register.css
@@ -1,47 +1,47 @@
-.register-container{
-    margin:0 40px 70px 40px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-  }
-  .register-input{
-    margin:5px 0 5px;
-    width:300px;
-    height:40px;
-    padding:3px;
-    border-radius:5px;
-  }
-  a{
-    text-decoration:none;
-  }
-  .register-button{
-    height:30px;
-    border-width:1px;
-    border-radius:5px;
-    border-color:black;
-    background-color:black;
-    color:white
+.register-container {
+  margin: 0 auto 70px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.register-button-disable{
-  height:30px;
-  border-width:0;
-  border-radius:5px;
-  border-color:grey;
-  background-color:grey;
-  color:white;
-  width:300px;
+.register-input {
+  margin: 5px 0 5px 10px;
+  width: 300px;
+  height: 40px;
+  padding: 3px;
+  border-radius: 5px;
 }
-.register-button:hover{
-  background-color:white;
-  color:black
+a {
+  text-decoration: none;
 }
-.register-text{
-    font-weight:bold;
-    width:300px;
+.register-button {
+  height: 30px;
+  border-width: 1px;
+  border-radius: 5px;
+  border-color: black;
+  background-color: black;
+  color: white;
 }
-img{
-  z-index:-1
+.register-button-disable {
+  height: 30px;
+  border-width: 0;
+  border-radius: 5px;
+  border-color: grey;
+  background-color: grey;
+  color: white;
+  width: 300px;
 }
-p{
-  margin-bottom:5px
+.register-button:hover {
+  background-color: white;
+  color: black;
+}
+.register-text {
+  font-weight: bold;
+  width: 300px;
+}
+img {
+  z-index: -1;
+}
+p {
+  margin-bottom: 5px;
 }
